--- a/Elementos/css/index.html
+++ b/Elementos/css/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>CSS con clases</h1>
     <section>
         <h2 class="textoAzul">Articulo 1</h2>
         <p class="textoAzul">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
